// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflow renders 0 1`] = `
Array [
  .c0 {
  overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders function 1`] = `
Array [
  .c0 {
  overflow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders negative number 1`] = `
Array [
  .c0 {
  overflow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    overflow: July;
  }
}

@media April {
  .c0 {
    overflow: August;
  }
}

@media January {
  .c0 {
    overflow: September;
  }
}

@media April {
  .c0 {
    overflow: November;
  }
}

@media June {
  .c0 {
    overflow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow: July;
  }
}

@media April {
  .c0 {
    overflow: August;
  }
}

@media January {
  .c0 {
    overflow: September;
  }
}

@media April {
  .c0 {
    overflow: November;
  }
}

@media June {
  .c0 {
    overflow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow: January;
  }
}

@media April {
  .c0 {
    overflow: December;
  }
}

@media January {
  .c0 {
    overflow: April;
  }
}

@media April {
  .c0 {
    overflow: May;
  }
}

@media June {
  .c0 {
    overflow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow: January;
  }
}

@media April {
  .c0 {
    overflow: December;
  }
}

@media January {
  .c0 {
    overflow: April;
  }
}

@media April {
  .c0 {
    overflow: May;
  }
}

@media June {
  .c0 {
    overflow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders postitive number 1`] = `
Array [
  .c0 {
  overflow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders string 1`] = `
Array [
  .c0 {
  overflow: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflow renders valid theme path 1`] = `
Array [
  .c0 {
  overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
